frontend/src/styles/index.css
:root {
  --c_background: white;
  --c_text: black;
  --c_main: #00ff00;
  --c_accent: #ff0000;
}

[data-theme="dark"] {
  --c_background: black;
  --c_text: white;
  --c_main: #00ff00;
  --c_accent: #ff0000;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font-family: Catamaran, sans-serif;
}

#root {
  height: 100vh;
}

.app {
  height: 100%;
  overflow: hidden;
  > * {
    overflow-x: auto;
  }
  color: var(--c_text);
  background-color: var(--c_background);
  display: flex;
  flex-direction: column;
  > * {
    flex: 1 1 0;
  }
}

li {
  margin-left: 1em;
}

